# Custom-Lib

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dreamjourney/customlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dreamjourney/customlib/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dreamjourney/customlib/: ExampleUnitTest.java
gpuimage/: build.gradle  proguard-rules.pro
gpuimage/src/androidTest/java/com/dreamjourney/gpuimage/: ExampleInstrumentedTest.java
gpuimage/src/main/cpp/: CMakeLists.txt  gpu-image.c
gpuimage/src/main/java/com/dreamjourney/gpuimage/: GLTextureView.java  GPUImage.java  GPUImageNativeLibrary.java  GPUImageRenderer.java  GPUImageView.java  (+1 more)
gpuimage/src/main/res/layout/: lodaing_dialog.xml
gpuimage/src/main/res/values/: attrs.xml  strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
imagetilezoom/: build.gradle  consumer-rules.pro
imagetilezoom/src/main/res/values/: attrs.xml
utilsx/: build.gradle  consumer-rules.pro  proguard-rules.pro
utilsx/src/main/res/drawable/: alpha_cursor.xml  checker_png.xml  color_selector.xml  round_rect.xml  square_cursor.xml
utilsx/src/main/res/layout/: color_picker_dialog.xml  crop_image_view.xml  custom_flag.xml  custom_progress_dialog.xml
utilsx/src/main/res/values/: attrs.xml  dimen.xml  strings.xml
(+150 files in other folders)
